--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
         "compression": "^1.7.4",
-        "cookie-parser": "^1.4.5",
+        "cookie-parser": "^1.4.6",
         "dotenv": "~8.1.0",
         "express": "~4.17.1",
         "express-rate-limit": "^5.0.0",
+        "express-session": "^1.17.2",
         "file-type": "~14.5.0",
         "handlebars": "^4.7.6",
         "helmet": "~3.22.0",
@@ -66,6 +67,7 @@
         "nanoid": "^3.1.10",
         "passport": "~0.4.1",
         "passport-jwt": "^4.0.0",
+        "passport-oauth2": "^1.6.1",
         "pg": "^8.2.1",
         "reflect-metadata": "^0.1.13",
         "request-context": "~2.0.0",
@@ -82,9 +84,11 @@
         "@nestjs/testing": "^7.0.8",
         "@types/bcrypt": "^3.0.0",
         "@types/compression": "^1.7.0",
+        "@types/cookie-parser": "^1.4.2",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^4.17.6",
         "@types/express-rate-limit": "^5.0.0",
+        "@types/express-session": "^1.17.4",
         "@types/file-type": "^10.9.1",
         "@types/helmet": "^0.0.47",
         "@types/jest": "^25.2.3",
