--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
         "@types/node": "^14.0.5",
         "@types/passport-jwt": "^3.0.3",
         "@types/supertest": "^2.0.9",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^3.0.0",
         "@typescript-eslint/eslint-plugin-tslint": "^3.0.0",
         "@typescript-eslint/parser": "^3.0.0",
