--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: o-geek
+      TZ: 'Asia/Ho_Chi_Minh'
+      PGTZ: 'Asia/Ho_Chi_Minh'
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
