--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "nest build",
         "start": "nest start",
-        "start:dev": "nest start --watch",
+        "start:dev": "TZ=UTC nest start --watch",
         "start:debug": "nest start --debug --watch",
         "format": "prettier --write \"src/**/*.ts\"",
         "start:hmr": "node dist/main",
