--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "docs:deploy": "yarn docs:build && gh-pages -d .vuepress/dist"
   },
   "dependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/common": "^7.0.8",
-    "@nestjs/core": "^7.0.8",
-    "@nestjs/jwt": "^7.0.0",
-    "@nestjs/microservices": "^7.0.8",
-    "@nestjs/passport": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.8",
-    "@nestjs/swagger": "^4.5.7",
-    "@nestjs/typeorm": "^7.0.0",
+    "@nestjs/cli": "^8.2.4",
+    "@nestjs/common": "^8.4.2",
+    "@nestjs/core": "^8.4.2",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/microservices": "^8.4.2",
+    "@nestjs/passport": "^8.2.1",
+    "@nestjs/platform-express": "^8.4.2",
+    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/typeorm": "^8.0.3",
     "@sentry/minimal": "^5.24.2",
     "@sentry/node": "^5.9.0",
     "@types/webpack": "^5.28.0",
-    "aws-sdk": "~2.683.0",
-    "axios": "^0.19.2",
+    "aws-sdk": "^2.1099.0",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.12.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "~8.1.0",
@@ -81,7 +81,7 @@
     "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.0.8",
+    "@nestjs/testing": "^8.4.2",
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
@@ -112,11 +112,11 @@
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "lint-staged": "~9.4.2",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.1",
     "tslint": "^6.1.2",
@@ -124,9 +124,9 @@
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "vuepress": "^1.5.0",
+    "vuepress": "^0.14.11",
     "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^4.9.2",
     "webpack-node-externals": "^1.7.2"
   },
   "jest": {
