--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dotenv": "~8.1.0",
     "express": "~4.17.1",
     "express-rate-limit": "^5.0.0",
+    "express-session": "^1.17.2",
     "file-type": "~14.5.0",
     "handlebars": "^4.7.6",
     "helmet": "~3.22.0",
@@ -66,6 +67,7 @@
     "nanoid": "^3.1.10",
     "passport": "~0.4.1",
     "passport-jwt": "^4.0.0",
+    "passport-oauth2": "^1.6.1",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "request-context": "~2.0.0",
