--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "nest build",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "TZ=UTC nest start --watch",
     "start:debug": "nest start --debug --watch",
     "format": "prettier --write \"src/**/*.ts\"",
     "start:hmr": "node dist/main",
@@ -37,7 +37,7 @@
     "@nestjs/microservices": "^7.0.8",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.8",
-    "@nestjs/swagger": "^4.5.7",
+    "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.0.0",
     "@sentry/minimal": "^5.24.2",
     "@sentry/node": "^5.9.0",
@@ -48,7 +48,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "^1.4.6",
     "dotenv": "~8.1.0",
     "express": "~4.17.1",
     "express-rate-limit": "^5.0.0",
@@ -84,9 +84,11 @@
     "@nestjs/testing": "^7.0.8",
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.6",
     "@types/express-rate-limit": "^5.0.0",
+    "@types/express-session": "^1.17.4",
     "@types/file-type": "^10.9.1",
     "@types/helmet": "^0.0.47",
     "@types/jest": "^25.2.3",
