--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@nestjs/microservices": "^7.0.8",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.8",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.0.0",
     "@sentry/minimal": "^5.24.2",
     "@sentry/node": "^5.9.0",
+    "@types/cron": "^1.7.3",
     "@types/webpack": "^5.28.0",
     "aws-sdk": "~2.683.0",
     "axios": "^0.19.2",
