--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
+    "start": "TZ=UTC nest start",
     "start:dev": "TZ=UTC nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "TZ=UTC nest start --debug --watch",
     "format": "prettier --write \"src/**/*.ts\"",
     "start:hmr": "node dist/main",
     "migration": "ts-node node_modules/typeorm/cli.js migration:run -f ormconfig",
@@ -34,6 +34,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/common": "^7.0.8",
     "@nestjs/core": "^7.0.8",
+    "@nestjs/event-emitter": "^1.1.0",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/microservices": "^7.0.8",
     "@nestjs/passport": "^7.1.6",
